--- a/src/App.css
+++ b/src/App.css
@@ -503,9 +503,12 @@ li h3 {
   padding-left: 20px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 710px) {
   /* NAVBAR */
   .logo img {
+    display: none;
+  }
+  .footer {
     display: none;
   }
   .navbar {
@@ -542,6 +545,9 @@ li h3 {
   }
   .onsite-side {
     width: 100%;
+  }
+  .offsite-side {
+    float: none;
   }
   .full-list {
     display: block;
