--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,34 @@ img {
   background: rgb(155, 155, 155);
   transition-duration: 0.5s ease-in-out;
 }
+.staff-menu {
+  background: rgba(199, 199, 199, 0.85);
+  display: grid;
+  overflow: hidden;
+  position: absolute;
+  top: 0px;
+  box-shadow: gray 2px 2px;
+  transform: translate(5px, 97px);
+  transition: .4s;
+}
+.staff-menu .staff-link a {
+  display: block;
+  color: black;
+  font-size: smaller;
+  text-align: left;
+  padding: 10px 20px 10px 10px;
+  margin: 0;
+  transition-duration: 0.5s ease-in-out;
+}
+.staff-link {
+  display: block;
+  text-align: left;
+}
+.staff-menu .staff-link a:hover {
+  color: #E8374D;
+  background: rgb(155, 155, 155);
+  transition: 0.5s ease-in-out;
+}
 
 /* SPLASHPAGE */
 
