--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ img {
   width: 100%;
   transform: translateY(0px);
   transition: 0.25s;
+  height: 120px;
 }
 .scrolled {
   background-color: rgba(0, 0, 0, 0.75);
@@ -42,7 +43,8 @@ img {
 }
 .bar {
   display: flex;
-  margin: 0 10px;
+  margin: 0;
+  justify-content: space-between;
 }
 .bar a {
   text-decoration: none;
@@ -62,8 +64,8 @@ img {
   width: 32px;
 }
 .sub-menu {
-  padding: 7% 0;
-  margin: auto;
+  padding: 8.5% 0;
+  margin: 0;
 }
 .dropdown-menu {
   background: rgba(199, 199, 199, 0.85);
@@ -72,7 +74,7 @@ img {
   position: absolute;
   top: 0px;
   box-shadow: gray 2px 2px;
-  transform: translate(5px, 97px);
+  transform: translate(5px, 120px);
   transition: .4s;
 }
 .collapse-menu {
@@ -102,7 +104,7 @@ img {
   position: absolute;
   top: 0px;
   box-shadow: gray 2px 2px;
-  transform: translate(5px, 97px);
+  transform: translate(5px, 120px);
   transition: .4s;
 }
 .staff-menu .staff-link a {
@@ -453,10 +455,21 @@ li h3 {
 /* FOOTER */
 .footer {
   background: #E8374D;
+  padding: 3%;
 }
 .list {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  display: flex;
+  justify-content: space-between;
+}
+.list a {
+  text-decoration: none;
+  color: white;
+  font-size: larger;
+  transition: 0.5s ease-in-out;
+}
+.list a:hover {
+  color: black;
+  transition: 0.5s ease-in-out;
 }
 
 /* PROVIDER/EMPLOYEE DIRECTORY */
@@ -769,8 +782,9 @@ li h3 {
     display: none;
   }
   .navbar {
-    padding: 10px 0;
+    padding: 0;
     width: 100%;
+    height: 75px;
   }
   .navbar .logo {
     margin: 0;
@@ -780,7 +794,10 @@ li h3 {
   }
   .bar a {
     margin: auto 8px;
-    font-size: 90%;
+    font-size: 80%;
+  }
+  .staff-menu, .dropdown-menu {
+    transform: translate(5px, 75px);
   }
   /* DIETING */
   .diet-nav {
